Update all text labels to French, except for "Smart Traffic Light"