@@ -3,35 +3,32 @@ package Main;
 import GUI.ProgramGUI;
 import Tools.Constants;
 import javafx.application.Application;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.Label;
 import javafx.stage.Stage;
 
-//java --module-path C:\javafx-sdk-13.0.2\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar STL.jar
+import java.util.List;
+import java.util.Map;
 
 public class Main extends Application {
+
+    private static Connector connector;
 
     public static void main(String[] args) {
         launch(args);
     }
 
-    private SerialConnection serialConnection;
-
     @Override
     public void start(Stage primaryStage) throws Exception {
-//        Parent root = FXMLLoader.load(getClass().getResource("sample.fxml"));
-
-        serialConnection = new SerialConnection("COM3"); // Replace with your port
-        if (serialConnection.openConnection()) {
+        connector = new Connector("COM5"); // Replace with your port
+        if (connector != null) {
             Label dataLabel = new Label("Waiting for data...");
 
             new Thread(() -> {
                 while (true) {
-                    String data = serialConnection.readData();
-                    if (data != null) {
-                        dataLabel.setText(data);
+                    Map<String, Integer> data = connector.readFromPort();
+                    if (!data.isEmpty()) {
+                        dataLabel.setText(data.toString());
                     }
                 }
             }).start();
@@ -45,13 +42,16 @@ public class Main extends Application {
         primaryStage.setTitle(Constants.window_label);
         primaryStage.setScene(scene);
         primaryStage.show();
-
     }
 
     @Override
     public void stop() {
-        serialConnection.closeConnection();
+        if (connector != null) {
+            connector.closeConnection();
+        }
     }
 
+    public static Connector getConnector() {
+        return connector;
+    }
 }
-
